# ProLIF

./: .codecov.yml  .codeql.yml  .gitattributes  .gitignore  .lgtm.yml  .pep8speaks.yml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.md  README.rst  environment.yml  mypy.ini  notebooks  pyproject.toml  setup.cfg  setup.py
.binder/: environment.yml  postBuild
.github/: codeql.yml
.github/workflows/: _build-package.yml  build.yml  ci.yaml  ci.yml  codeql.yml  formatting.yml  formatting_linting.yml  type-check.yml
binder/: postBuild
data/: chlorine.mol2  metal.mol2  metal_false.mol2  xbond_acceptor.mol2  xbond_acceptor_false_xar.mol2  xbond_donor.mol2
docs/: changelog.rst  conf.py  environment.yml  index.rst  installation.rst  modules.rst  requirement.txt
docs/notebooks/: advanced.ipynb  docking.ipynb  how-to.ipynb  implicit-hbond.ipynb  implicit-hbond_for_debug.ipynb  md-ligand-protein.ipynb  md-protein-protein.ipynb  pdb.ipynb  protein-protein_interactions.ipynb  quickstart.ipynb  visualisation.ipynb  water-bridge.ipynb
docs/source/: api.rst  citation.rst  installation.rst  quickstart.rst  tutorials.rst  visualization.rst
docs/source/modules/: input.rst  interaction-fingerprint.rst  parallel.rst  plotting.rst  residues.rst  types.rst  utils.rst
examples/: ligand.mol2  protein.mol2
notebooks/: demo.ipynb  detect_rings.ipynb  interaction_diagram.ipynb  md trajectory.ipynb  md_trajectory.ipynb
prolif/: __about__.py  __init__.py  _version.py  chemistry.py  command_line.py  constants.py  datafiles.py  dataframe.py  debugger.py  encoder.py  exceptions.py  fingerprint.py  frame.py  ifp.py  interactions.py  ligand.py  logger.py  molecule.py  parallel.py  parameters.json  parameters.py  pickling.py  prolif.py  protein.py  protein_helper.py  rdkitmol.py  residue.py  temp.py  topology.py  trajectory.py  types.py  typeshed.py  utils.py  version.py
prolif/data/: ACE.cif  acceptor_false.mol2  anion.mol2  bromine.mol2  cation_false.mol2  donor.mol2  facetoface.mol2  mol_comment.mol2  water_m2.xtc
prolif/data/implicitHbond/: 1.D_protonated.sdf  README.md
prolif/data/implicitHbond/1s2g__1__1.A_2.C__1.D/: chain_mapping.json  receptor.cif  sequences.fasta  system.cif  water_mapping.json
prolif/data/implicitHbond/1s2g__1__1.A_2.C__1.D/ligand_files/: 1.D.sdf
prolif/data/molecule_standardizer/templates/: BEN.cif
prolif/data/protein_helper/templates/: NME.cif  TPO.cif  standard_aa.cif  standard_aa_name.xml
prolif/data/vina/: vina_output.mol2  vina_output.sdf  vina_output_ligand_1.pdbqt  vina_output_ligand_2.pdbqt  vina_output_ligand_3.pdbqt  vina_output_ligand_4.pdbqt  vina_output_ligand_5.pdbqt  vina_output_ligand_6.pdbqt  vina_output_ligand_7.pdbqt  vina_output_ligand_8.pdbqt  vina_output_ligand_9.pdbqt
prolif/exports/: __init__.py  to_networkx.py
prolif/interactions/: __init__.py  base.py  constants.py  interactions.py  utils.py  water_bridge.py
prolif/interactions/_jax/: README.md  __init__.py  api.py  framebatch.py  integration.py  primitives.py
prolif/io/: __init__.py  cif.py  constants.py  molecule_standardizer.py  protein_helper.py  template_engine.py  xml.py
prolif/plotting/: barcode.py  colors.py  complex3d.py  network.js  network.py  residues.py  utils.py
prolif/plotting/complex3d/: __init__.py  base.py  plot.py  py3dmol_backend.py  pymol_backend.py
prolif/plotting/exports/: __init__.py  to_networkx.py
prolif/plotting/network/: __init__.py  lignetwork.py  network.css  network.html  network.js
scripts/: check_types.py  test_build.py
tests/: acceptor.mol2  benzene.mol2  cation.mol2  cation_false.mol2  conftest.py  edgetoface.mol2  facetoface.mol2  ligand.mol2  mol2factory.py  test_base.py  test_constants.py  test_fingerprint.py  test_ifp.py  test_interactions.py  test_io.py  test_jax.py  test_molecule.py  test_parallel.py  test_pickling.py  test_protein_helper.py  test_residues.py  test_utils.py  test_wrapper_docs.py  xbond_acceptor_false_axd.mol2
tests/data/: .traj.xtc_offsets.npz  cation.mol2  traj.xtc
tests/notebooks/: viz-pi-stacking.ipynb
tests/plotting/: test_barcode.py  test_complex3d.py  test_network.py  test_nx_graph_export.py  test_residue_coordinates.py  test_residues.py
