[metadata]
name = prolif
description = Protein-Ligand Interaction Fingerprints
author = Cédric Bouysset
author_email = bouysset.cedric@gmail.com
license = Apache License, Version 2.0
license_file = LICENSE
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/chemosim-lab/ProLIF
project_urls = 
    Discussions = https://github.com/chemosim-lab/ProLIF/discussions
    Documentation = https://prolif.readthedocs.io/en/latest/
    Issues = https://github.com/chemosim-lab/ProLIF/issues
classifiers =
    Development Status :: 4 - Beta
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
keywords =
    science
    chemistry
    biology
    drug-design
    chemoinformatics
    molecular-dynamics

[options]
packages = prolif
python_requires = >=3.6
install_requires =
    pandas>=1.0.0
    numpy>=1.13.3
    scipy>=1.3.0
    mdanalysis @ git+https://github.com/cbouy/mdanalysis.git@prolif#subdirectory=package
    tqdm
zip_safe = False
include_package_data = True

[options.extras_require]
tests =
    pytest>=6.1.2
    pytest-cov
    codecov

[versioneer]
VCS = git
style = pep440
versionfile_source = prolif/_version.py
versionfile_build = prolif/_version.py
tag_prefix =
parentdir_prefix = ProLIF-